--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,60 +1,81 @@
 <% layout("layouts/boilerplate")%>
-    
 
-        <body>
-            <div class="row">
-                <div class="col-8 offset-2 mt-3">
-                    <h3>
-                        <%= listing.title%>
-                    </h3>
-                    <div class="card listing-card-show shadow">
-                        <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
+
+    <body>
+        <div class="row">
+            <div class="col-8 offset-2 mt-3">
+                <h3>
+                    <%= listing.title%>
+                </h3>
+                <div class="card listing-card-show shadow">
+                    <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
+                    <br>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <i>listed by:
+                                <%=listing.owner.username%>
+                            </i>
+                        </p>
+
                         <br>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <i>listed by:
-                                    <%=listing.owner.username%>
-                                </i>
+                        <p class="card-text"></p>
+                        <%= listing.description %>
                             </p>
-
-                            <br>
-                            <p class="card-text"></p>
-                            <%= listing.description %>
-                                </p>
-                                <p class="card-text">&#8377, <%= listing.price.toLocaleString("en-IN") %>
-                                </p>
-                                <p class="card-text">
-                                    <%= listing.location %>
-                                </p>
-                                <p class="card-text">
-                                    <%= listing.country %>
-                                </p>
-                                </p>
-                        </div>
+                            <p class="card-text">&#8377, <%= listing.price.toLocaleString("en-IN") %>
+                            </p>
+                            <p class="card-text">
+                                <%= listing.location %>
+                            </p>
+                            <p class="card-text">
+                                <%= listing.country %>
+                            </p>
+                            </p>
                     </div>
-                    <div><% if(currUser && currUser._id.equals(listing.owner._id)) {%>
-                            <div class="btns mt-3">
-                                <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit</a>
-                                <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" class="d-inline">
-                                    <button class="btn btn-dark">Delete</button>
-                                </form>
-                                </div></div> <% } %>
-                            
-                    </div>
-
-                   
                 </div>
+                <div>
+                    <% if(currUser && currUser._id.equals(listing.owner._id)) {%>
+                        <div class="btns mt-3">
+                            <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit</a>
+                            <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" class="d-inline">
+                                <button class="btn btn-dark">Delete</button>
+                            </form>
+                        </div>
+                </div>
+                <% } %>
+
             </div>
-           
-            <div class="row">
-                <div class="col-8 offset-2 mt-3">
-                    <% if(currUser){%>
+
+
+        </div>
+        </div>
+
+        <div class="row">
+            <div class="col-8 offset-2 mt-3">
+                <% if(currUser){%>
                     <h4>Leave a review</h4>
                     <form method="POST" action="/listings/<%=listing._id%>/reviews" novalidate class="needs-validation">
+
+
+
                         <div class="mb-3 mt-3">
                             <label for="rating" class="form-label">Rating</label>
-                            <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range"
-                                required>
+
+                            <fieldset class="starability-coinFlip">
+ 
+                                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0"
+                                    checked aria-label="No rating." />
+                                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                                <label for="first-rate1" title="Terrible">1 star</label>
+                                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                                <label for="first-rate2" title="Not good">2 stars</label>
+                                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                                <label for="first-rate3" title="Average">3 stars</label>
+                                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                                <label for="first-rate4" title="Very good">4 stars</label>
+                                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                                <label for="first-rate5" title="Amazing">5 stars</label>
+                            </fieldset>
+
                         </div>
                         <div class="mb-3 mt-3">
                             <label for="comment" class="form-label">Comments</label>
@@ -64,32 +85,38 @@
                         </div>
                         <button class="btn btn-outline-dark">Submit</button>
                     </form>
-                    
-                    <% }%><hr />
-                    <h4>All reviews</h4>
+
+                    <% }%>
+                        <hr />
+                        <h4>All reviews</h4>
 
 
-                    <div class="row">
+                        <div class="row">
 
-                        <%for(review of listing.reviews){%>
-                            <div class="card  col-5 ms-3 mb-3">
-                                <div class="card-body">
-                                    <h5 class="card-title"><%=review.author.username%></h5>
-                                    <p class="card-text">
-                                        <%= review.comment %>
-                                    </p>
-                                    <p class="card-text">
-                                        <%= review.rating %>
-                                    </p>
+                            <%for(review of listing.reviews){%>
+                                <div class="card  col-5 ms-3 mb-3">
+                                    <div class="card-body">
+                                        <h5 class="card-title">
+                                            <%=review.author.username%>
+                                        </h5>
+                                        <p class="starability-result card-text" data-rating="<%= review.rating %>">
+
+                                        </p>
+                                        <p class="card-text">
+                                            <%= review.comment %>
+                                        </p>
+
+
+                                    </div>
+                                    <form class="mb-3" method="POST"
+                                        action="/listings/<%= listing._id %>/reviews/<%=review._id%>?_method=DELETE">
+                                        <button class="btn btn-sm btn-dark">Delete</button>
+                                    </form>
                                 </div>
-                                <form class="mb-3" method="POST"
-                                    action="/listings/<%= listing._id %>/reviews/<%=review._id%>?_method=DELETE"><button
-                                        class="btn btn-sm btn-dark">Delete</button></form>
-                            </div>
-                            <% } %>
+                                <% } %>
 
 
-                    </div>
-                </div>
+                        </div>
             </div>
-        </body>
+        </div>
+    </body>
